fixed iframe squashin fr

--- a/index.css
+++ b/index.css
@@ -38,5 +38,5 @@ body {
 
 iframe {
   width: auto;
-  height: auto;
+  height: 100%;
 }
